borrar clases no necesarias, reduje los html a 5, ajustar grids, hacer responsive html secundarias

--- a/Pages/meditacion.html
+++ b/Pages/meditacion.html
@@ -62,7 +62,7 @@
     
     <main class="cuerpo">
         <section class="seccion-segunda">
-            <div class="seccion-segunda-info s1">
+            <div class="seccion-segunda-info">
                 <div class="seccion-primera-info-plus">
                     <h2> Meditación </h2>
                     <p> 
