--- a/Pages/tarot.html
+++ b/Pages/tarot.html
@@ -138,9 +138,8 @@
                 </div>
             </div>
         </section>
-        <section class="">
         <section>
-
+        <section>
             <div id="carouselExampleFade" class="carousel slide carousel-fade">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
