--- a/index.html
+++ b/index.html
@@ -75,10 +75,7 @@
             </div>
 
             <div class="seccion-primera-info h2">
-                <p class="seccion-primera-info-plus">Si quiere saber más sobre mí y mí experiencia haga click en el link.
-                <a href="./Pages/sobre-mi.html">Sobre mí</a>
-                </p> 
-                <img class="" src="Images/arbol01.jpg" alt="arbol solitario">
+                <img src="Images/arbol01.jpg" alt="arbol solitario">
             </div>
 
             <div class="seccion-primera-info h4">
@@ -119,42 +116,6 @@
 
             </div>
 
-            <div class="seccion-primera-info h10">
-                <h2 class="titulo-articulo"> Reflexología </h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero culpa doloribus voluptatum rem quibusdam, eum voluptate suscipit, alias distinctio impedit tempore repudiandae inventore recusandae a aspernatur laboriosam expedita reiciendis ipsam.
-                </p>
-            </div>
-
-            <div class="seccion-primera-info h11">
-                <p> Para saber más sobre Reflexología hacer click aquí: <a href="./Pages/reflexologia.html">Reflexología</a>
-                </p>
-                <img src="Images/reflex01.jpg" alt="masaje de pies">
-
-            </div>
-
-            <div class="seccion-primera-info h12">
-                <h2 class="titulo-articulo"> Budismo </h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dolorem autem voluptatem aspernatur labore doloremque eveniet magnam, tempora, soluta debitis nam fugiat iure nobis molestias quaerat ad laborum sed vitae.
-                </p>
-            </div>
-
-            <div class="seccion-primera-info h13">
-                <p> Para saber más sobre budismo hacer click aquí: <a href="./Pages/budismo.html">Budismo</a>
-                </p>
-                <img src="Images/budismo01.jpg" alt="monje meditando">
-            </div>
-
-            <div class="seccion-primera-info h14">
-                <h2 class="titulo-articulo"> Shiatsu </h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus amet corporis quam sunt fugit? Explicabo repellat consectetur unde quis in corporis! Vero error aut reprehenderit temporibus odit tenetur vel quos!
-                </p>
-            </div>
-
-            <div class="seccion-primera-info h15">
-                <p> Para saber más sobre shiatsu hacer click aquí: <a href="./Pages/shiatsu.html">Shiatsu</a>
-                </p>
-                <img src="Images/reflex04.jpg" alt="mesa para masajes">
-            </div>
 
     </section>
     </main>
