borré paginas que ya no están y modifiqué el a de meditacion

--- a/Pages/meditacion.html
+++ b/Pages/meditacion.html
@@ -75,8 +75,9 @@
                         Si decimos un mantra o una oración, podrá expandirse de manera integral a todo nuestro sistema.
                     </p>
                     <p> 
-                        Si quieres recibir más información sobre nuestros servicios, haz click en el enlace: <a href="./contacto.html">Contacto</a>
-                    </p>                
+                        Si quieres recibir más información sobre nuestros servicios, haz click en el enlace: 
+                    </p>    
+                    <a href="./contacto.html">Contacto</a>            
                 </div>
                 <img src="../Images/meditar02.jpg" alt="persona meditando">
             </div>
