--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Contáctanos</title>
 
 </head>
@@ -15,14 +15,14 @@
     <header>
         <nav class="navbar barra-navegacion bg-body-tertiary sticky-top navbar-expand-md bg-primary" data-bs-theme="dark">
             <div class="container-fluid barra-navegacion-contenido">
-                <img src="../Images/eclipse02.jpg" alt="eclipse">
+                <img src="../images/eclipse02.jpg" alt="eclipse">
                 <a class="navbar-brand" href="../index.html"> Emersión Soluciones Holísticas </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header cabecera-lateral">
-                        <img src="../Images/eclipse02.jpg" alt="eclipse">
+                        <img src="../images/eclipse02.jpg" alt="eclipse">
                         <h1 class="offcanvas-title" id="offcanvasNavbarLabel">Emersión Soluciones Holísticas</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
@@ -32,26 +32,26 @@
                                 <a class="nav-link active" aria-current="page" href="../index.html">Inicio </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../Pages/tarot.html">Tarot</a>
+                                <a class="nav-link" href="../pages/tarot.html">Tarot</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Nuestra propuesta
                                 </a>
-                                    <ul class="dropdown-menu">
-                                        <li>
-                                            <a class="dropdown-item" href="../Pages/reiki.html">Reiki</a>
-                                        </li>
-                                        <li>
-                                            <hr class="dropdown-divider">
-                                        </li>
-                                        <li>
-                                            <a class="dropdown-item" href="../Pages/meditacion.html">Meditación</a>
-                                        </li>
-                                    </ul>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a class="dropdown-item" href="../pages/reiki.html">Reiki</a>
+                                    </li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="../pages/meditacion.html">Meditación</a>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../Pages/contacto.html">Contáctanos</a>
+                                <a class="nav-link" href="../pages/contacto.html">Contáctanos</a>
                             </li>
                         </ul>
                     </div>
